	PR c++/21983 	* class.c (find_final_overrider): Move diagnostic about no unique final 	overrider to... 	(update_vtable_entry_for_fn): ... here.

* g++.dg/warn/pr21983.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@104533 138bc75d-0d04-0410-961f-82ee72b054a4